--- a/miniprogram/pages/new/new.wxss
+++ b/miniprogram/pages/new/new.wxss
@@ -15,6 +15,9 @@
   z-index: 999;
   border-bottom: 2rpx solid rgba(97, 94, 94, 0.137);
 }
+.form {
+  margin-top: 120rpx;
+}
 input {
   height: 62rpx;
   width: 85%;
