--- a/miniprogram/pages/mine/order/order.wxss
+++ b/miniprogram/pages/mine/order/order.wxss
@@ -16,15 +16,21 @@ page {
 }
 .topBar {
   height: 100rpx;
-  width: 70%;
+  width: 600rpx;
+  padding: 0 75rpx;
   display: flex;
-  margin: 0 auto 40rpx auto;
   line-height: 100rpx;
+  position: fixed;
+  top: 100rpx;
+  z-index: 997;
+  background: #F0F0F0;
+  font-size: 32rpx;
 }
 .topBar view {
   width: 33%;
   text-align: center;
   color: rgba(0, 0, 0, 0.7);
+  position: relative;
 }
 .tab-active {
   border-bottom: 10rpx solid #ECBC28;
@@ -33,5 +39,6 @@ page {
   font-weight: 600;
 }
 .content {
+  margin-top: 230rpx;
   height: 400rpx;
 }
