--- a/miniprogram/pages/mine/personal/personal.wxml
+++ b/miniprogram/pages/mine/personal/personal.wxml
@@ -13,11 +13,11 @@
     <view class="userName" bindtap="setUserName">
       <text class="itemName">用户名</text>
       <text class="itemContent">{{userName}}</text>
-      <image class="rightArrow" src="/images/icon/rightArrow.png" mode="widthFix"></image>
+      <image class="rightArrow" src="/images/icon/rightArrow.svg" mode="widthFix"></image>
     </view>
     <view class="address" bindtap="setAdress">
       <text class="itemName">地址</text>
-      <image class="rightArrow" src="/images/icon/rightArrow.png" mode="widthFix"></image>
+      <image class="rightArrow" src="/images/icon/rightArrow.svg" mode="widthFix"></image>
     </view>
   </view>
 </view>
