--- a/miniprogram/pages/msgDetails/msgDetails.wxml
+++ b/miniprogram/pages/msgDetails/msgDetails.wxml
@@ -13,7 +13,7 @@
     <image class="userProfile" src="{{userProfile}}" mode="widthFix"></image>
     <text class="userName">{{userName}}</text>
     <view class="area">
-      <image class="areaLogo" src="/images/icon/area.png" mode="widthFix"></image>
+      <image class="areaLogo" src="/images/icon/area.svg" mode="widthFix"></image>
       <view>{{area}}</view>
     </view>
   </view>
