--- a/miniprogram/pages/classify/classify.wxml
+++ b/miniprogram/pages/classify/classify.wxml
@@ -6,13 +6,13 @@
     <view id="petTransfer" class="{{currentTab == 2 ? 'tab-active':''}}" bindtap="switchTopTab">宠物转赠</view>
   </view>
   <view class="content" wx:if="{{currentTab == 0}}">
-    <msg-list bindtap="itemClick" data-index="{{msgList}}" msgList="{{msgList}}"></msg-list>
+    <msg-list binditemClick="itemClick" data-msgList="{{msgList}}" msgList="{{msgList}}"></msg-list>
   </view>
   <view class="content" wx:if="{{currentTab == 1}}">
-    <msg-list bindtap="itemClick" data-index="{{msgList}}" msgList="{{msgList}}"></msg-list>
+    <msg-list binditemClick="itemClick" data-msgList="{{msgList}}" msgList="{{msgList}}"></msg-list>
   </view>
   <view class="content" wx:if="{{currentTab == 2}}">
-    <msg-list bindtap="itemClick" data-index="{{msgList}}" msgList="{{msgList}}"></msg-list>
+    <msg-list binditemClick="itemClick" data-msgList="{{msgList}}" msgList="{{msgList}}"></msg-list>
   </view>
   <view class="toTop" bindtap="toTop">
     <image src="/images/icon/toTop.svg" mode="widthFix" />
