--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -46,8 +46,7 @@
       <view>最新发布</view>
       <image src="/images/index/title2.png" mode="widthFix"></image>
     </view>
-      <msg-list bindtap="itemClick" data-index="{{msgList}}" msgList="{{msgList}}"></msg-list>
-     
+      <msg-list binditemClick="itemClick" data-msgList="{{msgList}}" msgList="{{msgList}}"></msg-list>
   </view>
   <view class="toTop" bindtap="toTop">
     <image src="/images/icon/toTop.svg" mode="widthFix" />
