--- a/miniprogram/pages/load/load.wxml
+++ b/miniprogram/pages/load/load.wxml
@@ -1,23 +1,19 @@
 <!--pages/load/load.wxml-->
 <!-- 如果只是展示用户头像昵称，可以使用 <open-data /> 组件 -->
-
-
-    <view class="container">
-        <view class="userinfo">
-            <block wx:if="{{!hasUserInfo}}">
-                <button  wx:if="{{canIUseGetUserProfile}}"  bindtap="getUserProfile" class="mai"> 获取头像昵称 </button>
-                <button wx:else open-type="getUserInfo" class="mai" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-                <view class="med">----------</view>
-                <view class="txt">
-                    \t\t欢迎使用小程序，我们需要一些您的公开信息，包括昵称、头像等
-                </view>
-            </block>
-            <block wx:else>
-                <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-                <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-            </block>
-        </view>
-    </view>
-
-
-
+<view class="container">
+	<view class="logo">
+		<image src="/images/icon/logo.jpg" mode="widthFix"></image>
+		<view>窝筑</view>
+	</view>
+	<view class="userinfo">
+		<block wx:if="{{!hasUserInfo}}">
+			<view class="txt">欢迎使用小程序，我们需要一些您的公开信息，包括昵称、头像等</view>
+			<view wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile" class="button mai">授权登录</view>
+			<view wx:else open-type="getUserInfo" class="button mai" bindgetuserinfo="getUserInfo">授权登录</view>
+		</block>
+		<block wx:else>
+			<image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
+			<text class="userinfo-nickname">{{userInfo.nickName}}</text>
+		</block>
+	</view>
+</view>
