--- a/miniprogram/components/orderList/orderList.wxml
+++ b/miniprogram/components/orderList/orderList.wxml
@@ -1,5 +1,5 @@
 <!--components/orderList/orderList.wxml-->
-<view class="item" wx:for="{{orderList}}" wx:key="index">
+<view class="item" wx:for="{{orderList}}" wx:key="index" data-index="{{index}}" bindtap="click">
   <view class="topContent">
     <view class="orderId">订单号：{{item.orderId}}</view>
     <view class="orderTime">{{item.orderTime}}</view>
